# retro_2d

./: Cargo.toml  Trunk.toml  index.css  index.html  rustfmt.toml
.github/workflows/: deploy.yaml
lib/: assets.rs  camera.rs  config.rs  lib.rs  world.rs
lib/interact/: drag.rs  interact.rs  mod.rs
lib/world/: bg.rs  clothes.rs  mod.rs  plugin.rs
